# COVID-2019

./: CMakeCache.txt  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Makefile  README.md  Weapon.cpp  Weapon.hpp  bla.cpp  circle_detection.cpp  cmake_install.cmake  color_detection.cpp  color_detection2.cpp  finger_detection.cpp  game.cpp  main.cpp  opencv_project  opencv_project.cbp
